fix layout issues

--- a/wp-content/themes/drivewyze/assets/styles/blocks/_fleet-hero.scss
+++ b/wp-content/themes/drivewyze/assets/styles/blocks/_fleet-hero.scss
@@ -203,7 +203,7 @@
             max-width: 698px;
             width: 100%;
             margin-left: 51px;
-            padding: 10px 20px;
+            padding: 10px 28px;
           }
 
           @media (min-width: $bp-2XL) {
@@ -211,14 +211,14 @@
             flex-direction: column;
             justify-content: center;
             max-width: 913px;
-            padding: 30px 50px;
+            padding: 30px 59px;
           }
 
           @media (min-width: $bp-5XL) {
             max-width: 1297px;
             margin-left: 96px;
             margin-top: auto;
-            padding: 50px 50px 41px 65px;
+            padding: 50px 50px 41px 60px;
           }
 
           h3 {
