--- a/wp-content/themes/drivewyze/assets/styles/common/_global.scss
+++ b/wp-content/themes/drivewyze/assets/styles/common/_global.scss
@@ -69,3 +69,8 @@ body {
     }
   }
 }
+
+.button--ios,
+.button--gplay {
+  box-shadow: none;
+}
